...
        Surface(modifier = Modifier.fillMaxSize(), color = MaterialTheme.colorScheme.background) {
            Mavericks.initialize(LocalContext.current)
            WordDetail.Page(
                viewModel = WordDetailVMImpl(
                    WordDetailState(), repository = object : WordRepository {
                        private val words = FakeWord().wordData
                        override val wordHistory = MutableStateFlow(listOf("aaa", "bbb"))
                        override val currentLayer = MutableStateFlow(0)
                        override val currentWord = MutableStateFlow("")
                        override val details = MutableStateFlow(words)
                        override suspend fun push(key: WordKey) {}
                        override suspend fun pop(): Boolean = true
                        override suspend fun searchFor(word: String) =
...
                    modifier = Modifier
                        .padding(16.dp)
                        .align(Alignment.BottomEnd)
                ) {
                    Icon(
                        imageVector = Icons.Default.History,
                        contentDescription = "Show/Hide History",
                    )
                }
            }
        }
    }

...
        searchFor: (word: String) -> Unit,
        modifier: Modifier = Modifier,
    ) {
        LazyColumn(
            contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("word data list")
        ) {
            items(data.size) { index ->
                WordData(
                    data[index],
                    indexAt(data.size, index),
                    searchFor = searchFor,
...
        list: List<Word>,
        onWordChanged: (String) -> Unit,
        onFirstItem: (height: Int) -> Unit,
        onClose: () -> Unit,
        onItemClick: (word: String) -> Unit,
    ) {
        LazyColumn(modifier = Modifier.testTag("search section")) {
            item {
                SearchSectionHeader(
                    word = word,
                    onWordChanged = onWordChanged,
                    onFirstItem = onFirstItem,
                    onClose = onClose,
...
        word: String,
        onItemClick: (word: String) -> Unit,
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("search section item")
                .clearAndSetSemantics {
                    contentDescription = word
                    role = Role.Button
                }
        ) {
            Divider()
...
                .onGloballyPositioned { onFirstItem(it.size.height) }
                .padding(bottom = 16.dp)
        ) {
            IconButton(onClick = onClose) {
                Icon(
                    imageVector = Icons.Default.Close,
                    contentDescription = "Close Search Section",
                )
            }
            WordChest.WordInput(
                search = word,
                onSearchChanged = onWordChanged,
                shape = RoundedCornerShape(16.dp),
...
                ),
                modifier = Modifier.weight(1f)
            )
            IconButton(onClick = showDetail) {
                Icon(
                    imageVector = Icons.Default.ArrowForward,
                    contentDescription = "Show Word Detail",
                )
            }
        }
    }

    private fun indexAt(size: Int, index: Int) = if (size > 1) (index + 1).toString() else null
...
    @Composable
    fun WordData(data: Word.Data, index: String?, searchFor: (word: String) -> Unit) {
        FlexibleRow(
            horizontalSpacing = 8.dp,
            modifier = Modifier
                .padding(bottom = 16.dp)
                .testTag("word data")
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    data.word,
                    style = MaterialTheme.typography.headlineSmall,
                    color = MaterialTheme.colorScheme.primary,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.testTag("word title")
                )
                IndexItem(
                    index = index, modifier = Modifier
                        .align(Alignment.Top)
                        .testTag("word index")
                )
            }
            Text(
                "|${data.pronunciation}|",
                color = MaterialTheme.colorScheme.secondary,
                style = MaterialTheme.typography.titleMedium,
                modifier = Modifier.testTag("word pronunciation")
            )
        }
        Column(verticalArrangement = Arrangement.spacedBy(16.dp)) {
            data.sections.forEach { Section(it, searchFor = searchFor) }
        }
    }
...
    fun Section(section: Word.Data.Section, searchFor: (word: String) -> Unit) {
        Card(
            colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.primaryContainer),
            elevation = CardDefaults.cardElevation(defaultElevation = 4.dp),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("word section")
        ) {
            Column(
                verticalArrangement = Arrangement.spacedBy(8.dp), modifier = Modifier.padding(16.dp)
            ) {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
...
                ) {
                    section.type.apply {
                        Text(
                            type.label,
                            style = MaterialTheme.typography.titleLarge,
                            fontWeight = FontWeight.Bold,
                            modifier = Modifier.testTag("word type")
                        )
                        meta?.let {
                            Text(
                                it,
                                color = MaterialTheme.colorScheme.outline,
                                fontStyle = FontStyle.Italic,
...
            }
        }
    }

    @Composable
    fun Definition(data: Word.Data.Section.Definition, index: String?, searchFor: (word: String) -> Unit) {
        Row(modifier = Modifier.testTag("word definition")) {
            IndexItem(
                index = index,
                style = LocalTextStyle.current.copy(fontWeight = FontWeight.Bold),
                modifier = Modifier
                    .padding(end = 4.dp)
                    .testTag("section index")
            )
            Column {
                Part(data.value, searchFor = searchFor, modifier = Modifier.testTag("section value"))
                Column(modifier = Modifier.testTag("section samples")) {
                    data.samples.forEach { SamplePart(it, searchFor = searchFor) }
                }
            }
        }
    }

...
        data: Word.Data.Section.Definition.Part,
        modifier: Modifier = Modifier,
        searchFor: (word: String) -> Unit,
    ) {
        Row(horizontalArrangement = Arrangement.spacedBy(8.dp),
            modifier = modifier
                .testTag("sample part")
                .semantics(mergeDescendants = true) {}) {
            Text("●")
            Part(data, searchFor = searchFor, modifier = modifier)
        }
    }
}
...
