...
            exit = fadeOut(tween(delayMillis = ANIMATION_DELAY + EXIT_ANIMATION_DURATION)),
            modifier = modifier.animateContentSize(tween(ENTER_ANIMATION_DURATION))
        ) {
            LazyColumn(
                contentPadding = PaddingValues(vertical = 4.dp),
                reverseLayout = true,
                modifier = Modifier.testTag("history list")
            ) {
                itemsIndexed(list, { _, it -> it }) { index, it ->
                    val animationDelay = index * animationDelayPerUnit
                    AnimatedVisibility(
                        visible = expand2,
                        enter = slideInHorizontally(
...
